Add supporting me links

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
@@ -13,10 +13,18 @@
   "text.rei.not.fully.initialized.tooltip": "Chybějící fáze: %s\nPokud toto nezmizí,\nzkuste hledat podporu s logy!",
   "text.rei.inventory.highlighting.enabled": "Zvýraznění inventáře zapnuto",
   "text.rei.inventory.highlighting.enabled.tooltip": "Tenhle režim dělá sloty neodpovídající\nfiltru hledání šedé.\nDvojitým kliknutím na vyhledávací lištu přepnete.",
+  "text.rei.caching.search": "REI mezipaměť výsledků vyhledávání...",
+  "text.rei.caching.search.step": "Krok %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Tmavý motiv",
   "text.rei.config.menu.craftable_filter": "Filtrovat vyrobitelné",
   "text.rei.config.menu.display": "Nastavení Zobrazení...",
   "text.rei.config.menu.display.remove_recipe_book": "Odstranit knihu receptů",
+  "text.rei.config.menu.display.left_side_mob_effects": "Levé postranní efekty mobů",
+  "text.rei.config.menu.display.left_side_panel": "Levý postranní panel",
+  "text.rei.config.menu.display.scrolling_side_panel": "Posuvný boční panel",
+  "text.rei.config.menu.display.caching_entry_rendering": "Vykreslování položek v mezipaměti",
+  "text.rei.config.menu.display.side_search_field": "Postranní vyhledávací pole",
+  "text.rei.config.menu.display.syntax_highlighting": "Zvýraznění syntaxe",
   "text.rei.config.menu.config": "Více Možností...",
   "category.rei.crafting": "Vyrábění",
   "category.rei.smelting": "Vypékání",
@@ -45,7 +53,9 @@
   "category.rei.tilling": "Zorání půdy",
   "category.rei.pathing": "Vytvoření pěšiny",
   "category.rei.waxing": "Voskovaní",
+  "category.rei.wax_scraping": "Oškrábání vosku",
   "category.rei.oxidizing": "Oxidujúci",
+  "category.rei.oxidation_scraping": "Oškrábání oxidace",
   "category.rei.information": "Informace",
   "text.rei.composting.chance": "§e%d%% šance",
   "text.rei.composting.page": "Strana %d",
@@ -54,6 +64,7 @@
   "text.rei.cheat_items": "Hráči {player_name} dán předmět ({item_count}x) [{item_name}§f]",
   "text.rei.failed_cheat_items": "§cNepodařilo se dát předměty.",
   "text.rei.too_long_nbt": "§cNBT předmětu je příliš dlouhé, než aby mohl být použito ve hře pro více hráčů.",
+  "text.rei.tag_match": "Přijmout štítek: #%s",
   "text.rei.performance": "Analýza výkonu",
   "ordering.rei.ascending": "Vzestupně",
   "ordering.rei.descending": "Sestupně",
@@ -61,12 +72,14 @@
   "ordering.rei.name": "Jméno",
   "ordering.rei.item_groups": "Skupiny předmětů",
   "text.auto_craft.move_items": "Přesunout předměty",
+  "text.auto_craft.move_items.tooltip": "Ctrl-klik pro přesun předmětů",
   "text.auto_craft.move_items.yog": "Generovat NullPointerException!!",
   "error.rei.transfer.too_small": "Položky nelze přesunout do mřížky %dx%d.",
   "error.rei.not.on.server": "REI není na serveru.",
   "error.rei.not.enough.materials": "Nedostatek materiálů.",
   "error.rei.internal.error": "Vnitřní chyba: %s",
   "error.rei.recipe.not.unlocked": "Recept není odemčen v knize receptů.",
+  "error.rei.not.supported.move.items": "Přesun předmětů není podporován tímto receptem a tímto kontejnerem.",
   "error.rei.no.handlers.applicable": "Není otevřena správná pracovní stanice",
   "error.rei.multi.errors": "Mnoho chyb:",
   "rei.rei.no.slot.in.inv": "Nelze najít žádné místo pro předměty v inventáři",
@@ -84,7 +97,14 @@
   "text.rei.gamemode_button.tooltip.entry": "Přepnout na režim %s",
   "text.rei.weather_button.tooltip.dropdown": "Přepnutí počasí: Rozevírací menu",
   "text.rei.weather_button.tooltip.entry": "Přepnout na režim %s",
+  "text.rei.time_button.tooltip.dropdown": "Přepnutí času: Rozevírací nabídka",
+  "text.rei.time_button.tooltip.entry": "Přepnout na %s",
+  "text.rei.time_button.name.morn": "Ráno",
+  "text.rei.time_button.name.noon": "Poledne",
+  "text.rei.time_button.name.evening": "Večer",
+  "text.rei.time_button.name.night": "Noc",
   "text.rei.reload_config": "Znovu načíst pluginy",
+  "text.rei.reload_search": "Znovu načíst hledání",
   "text.rei.config.is.reloading": "Pluginy se znovu načítají!",
   "text.rei.enabled": "Ano",
   "text.rei.disabled": "Ne",
@@ -119,8 +139,15 @@
   "text.rei.tiny_potato": "Drobné brambory",
   "text.rei.add_favorite_widget": "Přidat...",
   "text.rei.dispose_here": "Vyjmout zde",
+  "text.rei.crash.title": "REI havarovalo!",
+  "text.rei.crash.description": "§cRoughly Enough Item právě zaznamenal pád během \"%s\".\n\n§fDetaily pádu jsou zobrazeny níže. Prosím identifikujte mód, který způsobil pád a nahlaste jej autorovi módu, společně s protokolem pádu uvedeným níže.\n\nPokud se domníváte, že tento pád je způsoben chybou v Roughly Enough Item, nahlaste jej prosím na náš systém problémů.\n\n§6Děkujeme za tvou pomoc!\n",
+  "text.rei.crash.crash_report": "Otevřít zprávu o pádu",
+  "text.rei.changelog.title": "Seznam změn REI",
+  "text.rei.changelog.error.missingChangelogFile": "Chybí soubor se seznamem změn!",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Nepodařilo se přečíst soubor se seznamem změn!",
   "favorite.section.gamemode": "Herní režim",
   "favorite.section.weather": "Počasí",
+  "favorite.section.time": "Čas",
   "tooltip.rei.fluid_amount": "§7%d Díl",
   "tooltip.rei.fluid_amount.forge": "§7%d mK",
   "tooltip.rei.drag_to_add_favorites": "§7Přetáhni pro přidání do oblíbených!",
@@ -137,6 +164,7 @@
   "config.roughlyenoughitems.functionality": "Funkce",
   "config.roughlyenoughitems.advanced": "Pokročilé",
   "config.roughlyenoughitems.cheating": "Podvádění:",
+  "config.roughlyenoughitems.cheating.when_creative": "Během kreativního módu",
   "config.roughlyenoughitems.favoritesEnabled": "Povolit oblíbené:",
   "config.roughlyenoughitems.keyBindings": "Klávesové zkratky",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Zobrazit recept:",
@@ -176,6 +204,10 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Nahoře",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Dole",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Sloučit objekty s rovnocenným obsahem:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Tlačítko přidat do oblíbených:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Vždy neviditelné",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Automaticky skrývat",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Vždy viditelné",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Vybrat vše",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Zrušit výběr",
   "config.roughlyenoughitems.filteredEntries.hide": "Skrýt vybrané",
@@ -217,6 +249,9 @@
   "config.roughlyenoughitems.disableRecipeBook": "Zobrazit knihu receptů:",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNe",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aAno",
+  "config.roughlyenoughitems.leftSideMobEffects": "Pozice efektů mobů:",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Vlevo",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Vpravo (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Opravit místo po knize receptů (když je zakázána kniha receptů):",
   "config.roughlyenoughitems.lighterButtonHover": "Zesvětlit tlačítko při najetí:",
   "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Filtr vyrobitelných:",
@@ -232,6 +267,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "Řazení seznamu předmětů:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Rychlejší vykreslování předmětů:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Vykreslování položek v mezipaměti:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Tato možnost zlepší výkon pro vykreslování položek až 5x, s průměrným 2,5x ziskem výkonu. To však naruší efekty očarování a animované textury.",
   "config.roughlyenoughitems.itemCheatingMode": "Množství předmětů při podvádění:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normální",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Obrácené",
@@ -255,6 +292,10 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Prostý (podtržený)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Barevný",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Barevný (podtržený)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Režim zvýraznění předmětů:",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zvětšení",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Zvýraznění",
+  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Měl by filtr zobrazit:",
   "config.roughlyenoughitems.filteringScreen": "Vlastní filtrování",
   "config.roughlyenoughitems.filteringRulesScreen": "Vlastní pravidla filtrování",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Vytvořit pravidlo filtrování",
