--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -9,6 +9,10 @@
   "text.rei.search.field.suggestion": "Search...",
   "text.rei.feedback": "Any feedback you want to give to the REI developer? %s to submit your feedback!",
   "text.rei.feedback.link": "Click me to visit the Google Form",
+  "text.rei.support.me": "Support me to continue making REI better!",
+  "text.rei.support.me.desc": "As a patreon supporter of REI, you get to use the latest version of REI for Minecraft snapshots.\nAlternatively, you can also support me financially through renting a BisectHosting server.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Donate on Patreon",
+  "text.rei.support.me.bisect": "Use code SHEDANIEL on BisectHosting",
   "text.rei.not.fully.initialized": "REI not yet fully initialized!",
   "text.rei.not.fully.initialized.tooltip": "Missing stages: %s\nIf this does not go away,\ntry looking for support with the logs!",
   "text.rei.inventory.highlighting.enabled": "Inventory Highlighting On",
