--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/eo_uy.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/eo_uy.json
@@ -7,6 +7,25 @@
   "text.rei.cheating_limited_creative_enabled": "§aTrompado Ŝaltita (Per Krea)",
   "text.rei.no_permission_cheat": "Permesoj de operacianto necesas por trompi",
   "text.rei.search.field.suggestion": "Serĉi...",
+  "text.rei.feedback": "Ĉu vi volas prikomenti al la programisto de REI? %s por sendi vian prikomenton!",
+  "text.rei.feedback.link": "Alklaku min por iri al la Google Form",
+  "text.rei.not.fully.initialized": "REI ankoraŭ ne plene komenciĝitis!",
+  "text.rei.not.fully.initialized.tooltip": "Mankas fazoj: %s\nSe ĉi tiu ne malaperos,\nprovu serĉi subtenon kun la protokoloj!",
+  "text.rei.inventory.highlighting.enabled": "Markado de Inventaro Ŝaltitas",
+  "text.rei.inventory.highlighting.enabled.tooltip": "Ĉi tiu grizigas ujojn, kiujn ne akordas kun\nla serĉfiltrilo.\nDuoble alklaku la serĉbreton por baskuligi ĉi tiun reĝimon.",
+  "text.rei.caching.search": "REI kaŝmemorigas serĉrezultojn...",
+  "text.rei.caching.search.step": "Paŝo %d/%d (%s%%):",
+  "text.rei.config.menu.dark_theme": "Malhela Etoso",
+  "text.rei.config.menu.craftable_filter": "Filtrilo de Fareblaĵoj",
+  "text.rei.config.menu.display": "Agordoj de Ekrano...",
+  "text.rei.config.menu.display.remove_recipe_book": "Forigi Receptlibron",
+  "text.rei.config.menu.display.left_side_mob_effects": "Mobefektoj ĉe la Maldekstra Flanko",
+  "text.rei.config.menu.display.left_side_panel": "Panelo de la Maldekstra Flanko",
+  "text.rei.config.menu.display.scrolling_side_panel": "Rulumanta Flankpanelo",
+  "text.rei.config.menu.display.caching_entry_rendering": "Kaŝmemorigado de Bildigo de Eroj",
+  "text.rei.config.menu.display.side_search_field": "Flanka Serĉbreto",
+  "text.rei.config.menu.display.syntax_highlighting": "Sintaksa Markado",
+  "text.rei.config.menu.config": "Pli da Opcioj...",
   "category.rei.crafting": "Konstruado",
   "category.rei.smelting": "Elfandado",
   "category.rei.smelting.fuel": "Fuelo",
@@ -33,6 +52,10 @@
   "category.rei.beacon_payment": "Baliza Pago",
   "category.rei.tilling": "Plugado",
   "category.rei.pathing": "Vojiĝado",
+  "category.rei.waxing": "Vaksado",
+  "category.rei.wax_scraping": "Vakso-Skrapado",
+  "category.rei.oxidizing": "Oksidigo",
+  "category.rei.oxidation_scraping": "Oksidigo-Skrapado",
   "category.rei.information": "Informo",
   "text.rei.composting.chance": "§e%d%% Ŝanco",
   "text.rei.composting.page": "Paĝo %d",
