--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/he_il.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/he_il.json
@@ -7,6 +7,10 @@
   "text.rei.cheating_limited_creative_enabled": "רמאות דלוקה (במצב יצירתי)",
   "text.rei.search.field.suggestion": "חיפוש...",
   "text.rei.feedback.link": "תלחץ עליו כדי להכנס לטופס גוגל",
+  "text.rei.caching.search.step": "שלב %d/%d (%s%%):",
+  "text.rei.config.menu.dark_theme": "מצב כהה",
+  "text.rei.config.menu.display.remove_recipe_book": "הסר ספר מתכונים",
+  "text.rei.config.menu.config": "אפשרויות נוספות...",
   "category.rei.crafting": "יצירה",
   "category.rei.smelting": "התכה",
   "category.rei.smelting.fuel": "דלק",
@@ -45,6 +49,7 @@
   "ordering.rei.name": "שם",
   "ordering.rei.item_groups": "קבוצות פריטים",
   "text.auto_craft.move_items": "הזז פריטים",
+  "text.auto_craft.move_items.tooltip": "החזק קונטרול ותלחץ כדי להזיז פריטים",
   "text.auto_craft.move_items.yog": "צור NullPointerExeption!!",
   "error.rei.transfer.too_small": "לא אפשרי להזיז פריטים ל משטח %dx%d.",
   "error.rei.not.on.server": "REI לא מותקן על השרת.",
@@ -67,7 +72,13 @@
   "text.rei.gamemode_button.tooltip.entry": "העבר ל%s",
   "text.rei.weather_button.tooltip.dropdown": "החלף מזג אוויר: תפריט",
   "text.rei.weather_button.tooltip.entry": "העבר ל%s",
+  "text.rei.time_button.tooltip.entry": "החלף ל%s",
+  "text.rei.time_button.name.morn": "בוקר",
+  "text.rei.time_button.name.noon": "צהריים",
+  "text.rei.time_button.name.evening": "ערב",
+  "text.rei.time_button.name.night": "לילה",
   "text.rei.reload_config": "טען מחדש פלאגינים",
+  "text.rei.reload_search": "טען מחדש חיפוש",
   "text.rei.config.is.reloading": "פלאגינים נטענים מחדש!",
   "text.rei.enabled": "כן",
   "text.rei.disabled": "לא",
@@ -95,8 +106,10 @@
   "text.rei.jei_compat.sub.stability": "§c§l(אלפא)",
   "text.rei.view_recipes_for": "הראה מתכונים ל%s",
   "text.rei.add_favorite_widget": "הוסף...",
+  "text.rei.crash.title": "REI קרס!",
   "favorite.section.gamemode": "מצב משחק",
   "favorite.section.weather": "מזג אוויר",
+  "favorite.section.time": "זמן",
   "tooltip.rei.fluid_amount": "§7%d Unit",
   "tooltip.rei.fluid_amount.forge": "§7%s Mb",
   "tooltip.rei.drag_to_add_favorites": "תגרור את זה למעה כדי להוסיף את זה לרשימת הפריטים השמורים!",
@@ -139,13 +152,18 @@
   "config.roughlyenoughitems.miscellaneous": "שונות",
   "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "חצי מתכונים לחיצים",
   "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "הראה זהירת כישוף:",
+  "config.roughlyenoughitems.layout.configButtonLocation": "מקום כפטור קונפיגורציה",
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "למעלה יותר",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "נמוך יותר",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "תמיד בלתי נראה",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "הסתרה אוטומטית",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "תמיד נראה",
   "config.roughlyenoughitems.filteredEntries.selectAll": "בחר הכל",
   "config.roughlyenoughitems.filteredEntries.selectNone": "אל תבחר כלום",
   "config.roughlyenoughitems.filteredEntries.hide": "הסתר בחור",
   "config.roughlyenoughitems.filteredEntries.show": "הצג בחור",
   "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "טעון עולם קודם!",
+  "config.roughlyenoughitems.accessibility.useCompactTabs": "כרטיסיות קומפקטיות:",
   "config.roughlyenoughitems.theme.dark": "מצג כהה",
   "config.roughlyenoughitems.theme.light": "מצב בהיר",
   "config.roughlyenoughitems.recipeBorder.lighter": "בהיר יותר",
@@ -169,15 +187,21 @@
   "config.roughlyenoughitems.disableRecipeBook": "ספר מתכונים של וונילה:",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cלא",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§cכן",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "שמאל",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "ימין (רגיל)",
   "config.roughlyenoughitems.commands.gamemodeCommand": "פקודת מצב משחק:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "טען פלאגין ברירת מחדל:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cלא (מסוכן)",
   "config.roughlyenoughitems.commands.weatherCommand": "פקודת מזג אוויר:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
+  "config.roughlyenoughitems.itemCheatingMode": "כמות רמאות פריטים",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "נורמלי",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "הפוך",
   "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
+  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "פשוט",
+  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "פשוט (עם קו תחתון)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "צבעוני",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "מודגש",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "מחק",
   "rule.roughlyenoughitems.filtering.search.filter": "מסנן חיפוש:",
   "rule.roughlyenoughitems.filtering.search.show": "הצג / הסתר:",
