--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
@@ -13,6 +13,7 @@
   "text.rei.not.fully.initialized.tooltip": "初期化中に問題が発生しました：%s\nこれが表示され続ける場合は\nログとともにサポートに報告してください！",
   "text.rei.inventory.highlighting.enabled": "インベントリハイライト ON",
   "text.rei.inventory.highlighting.enabled.tooltip": "この機能はインベントリのスロットが\n検索したものと一致しない場合、灰色になります。\n検索ボックスをダブルクリックで切り替えます。",
+  "text.rei.caching.search": "検索結果をキャッシュしています...",
   "text.rei.config.menu.dark_theme": "ダークテーマ",
   "text.rei.config.menu.craftable_filter": "クラフタブルフィルター",
   "text.rei.config.menu.display": "表示設定...",
@@ -20,6 +21,7 @@
   "text.rei.config.menu.display.left_side_mob_effects": "左側にポーション効果",
   "text.rei.config.menu.display.left_side_panel": "左側のアイテムリスト",
   "text.rei.config.menu.display.scrolling_side_panel": "アイテムリストのスクロール",
+  "text.rei.config.menu.display.caching_entry_rendering": "キャッシュされたアイテムリストの表示",
   "text.rei.config.menu.display.side_search_field": "リスト側の検索ボックス",
   "text.rei.config.menu.display.syntax_highlighting": "シンタックスハイライト",
   "text.rei.config.menu.config": "詳細設定...",
@@ -93,7 +95,14 @@
   "text.rei.gamemode_button.tooltip.entry": "%sに切り替える\n",
   "text.rei.weather_button.tooltip.dropdown": "天候の変更：ドロップダウン",
   "text.rei.weather_button.tooltip.entry": "%sにする",
+  "text.rei.time_button.tooltip.dropdown": "時間の変更：ドロップダウン",
+  "text.rei.time_button.tooltip.entry": "%sに切り替える",
+  "text.rei.time_button.name.morn": "朝",
+  "text.rei.time_button.name.noon": "昼",
+  "text.rei.time_button.name.evening": "夕",
+  "text.rei.time_button.name.night": "夜",
   "text.rei.reload_config": "プラグインを再読み込み",
+  "text.rei.reload_search": "検索の再読み込み",
   "text.rei.config.is.reloading": "プラグインを再読み込みしています！",
   "text.rei.enabled": "はい",
   "text.rei.disabled": "いいえ",
@@ -128,8 +137,15 @@
   "text.rei.tiny_potato": "とても小さいじゃがいも",
   "text.rei.add_favorite_widget": "追加...",
   "text.rei.dispose_here": "ここで処分する",
+  "text.rei.crash.title": "REIがクラッシュしました！",
+  "text.rei.crash.description": "§cRoughly Enough Item は\"%s\"の実行中に問題が発生しました。\n\n§fクラッシュの詳細は以下に表示されます。 クラッシュの原因となったmodを確認し、以下のクラッシュレポートと一緒にそのmodの開発者に相談してください。\n\nこのクラッシュがRoughly Enough Itemの不具合により発生していると思われる場合は、私たちのIssue Trackerに報告してください。\n\n§6ご協力ありがとうございました！\n",
+  "text.rei.crash.crash_report": "クラッシュレポートを表示する",
+  "text.rei.changelog.title": "REI 更新履歴",
+  "text.rei.changelog.error.missingChangelogFile": "更新履歴ログが見つかりません！",
+  "text.rei.changelog.error.failedToReadChangelogFile": "更新履歴ログの読み込みに失敗しました！",
   "favorite.section.gamemode": "ゲームモード",
   "favorite.section.weather": "天候",
+  "favorite.section.time": "時間",
   "tooltip.rei.fluid_amount": "§7%d単位",
   "tooltip.rei.fluid_amount.forge": "§7%dmB",
   "tooltip.rei.drag_to_add_favorites": "§7上にドラッグアンドドロップしてお気に入り登録しましょう！",
@@ -185,6 +201,8 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "上側",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "下側",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "同じ内容の時マージ表示:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "常に非表示",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "常に表示",
   "config.roughlyenoughitems.filteredEntries.selectAll": "すべて選択",
   "config.roughlyenoughitems.filteredEntries.selectNone": "すべて解除",
   "config.roughlyenoughitems.filteredEntries.hide": "選択したものを非表示",
@@ -243,6 +261,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "アイテムリストの並べ替え：",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "アイテムリスト表示の最適化：",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "キャッシュされたアイテムリストの表示：",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "この設定は、アイテムリストのアイテムを描画する際のパフォーマンスを最大5倍、平均で2.5倍向上させることができます。ただし、エンチャントの輝きやテクスチャのアニメーションなどを崩してしまう恐れがあります。",
   "config.roughlyenoughitems.itemCheatingMode": "チートモードのアイテムの数：",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "普通",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "反転",
@@ -266,6 +286,7 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "プレーン(アンダースコア)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "カラフル",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "カラフル(アンダースコア)",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "ハイライト表示",
   "config.roughlyenoughitems.filteringScreen": "フィルタリングの設定",
   "config.roughlyenoughitems.filteringRulesScreen": "フィルタリングルールの変更",
   "config.roughlyenoughitems.filteringRulesScreen.new": "フィルタリングルールの追加",
