--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
@@ -5,16 +5,20 @@
   "text.rei.cheating_limited_enabled": "§b치트 활성화됨 (명령어 사용)",
   "text.rei.cheating_enabled_no_perms": "§7치트 §c활성화됨 §7(권한 없음)",
   "text.rei.cheating_limited_creative_enabled": "§a치트 활성화됨 (크리에이티브 사용)",
-  "text.rei.no_permission_cheat": "아이템 치트를 사용하려면 오퍼레이터 권한이 필요합니다",
+  "text.rei.no_permission_cheat": "아이템 치트를 사용하려면 관리자 권한이 필요합니다",
   "text.rei.search.field.suggestion": "검색...",
   "text.rei.feedback": "REI 개발자에게 하고 싶은 피드백이 있나요? %s 하려면 클릭해주세요!",
   "text.rei.feedback.link": "Google Form에 접속하여 피드백을 제출",
   "text.rei.not.fully.initialized": "아직 REI 초기 설정이 완료되지 않았습니다!",
   "text.rei.not.fully.initialized.tooltip": "누락된 단계: %s\n그래도 계속 해결되지 않으면,\n로그를 가지고 지원을 요청하세요!",
-  "text.rei.inventory.highlighting.enabled": "인벤토리 강조 On",
+  "text.rei.inventory.highlighting.enabled": "보관함 강조 켬",
   "text.rei.inventory.highlighting.enabled.tooltip": "검색 필터와 일치하지 않는\n슬롯은 회색으로 바뀝니다.\n검색 표시줄을 두 번 클릭하여 모드를 전환할 수 있습니다.",
-  "text.rei.config.menu.dark_theme": "다크 테마",
+  "text.rei.config.menu.dark_theme": "어두운 테마",
+  "text.rei.config.menu.craftable_filter": "제작 가능 필터",
   "text.rei.config.menu.display": "화면 설정",
+  "text.rei.config.menu.display.remove_recipe_book": "제작법 책 지우기",
+  "text.rei.config.menu.display.caching_entry_rendering": "항목 렌더링 캐싱",
+  "text.rei.config.menu.display.syntax_highlighting": "구문 강조",
   "category.rei.crafting": " 제작",
   "category.rei.smelting": "제련",
   "category.rei.smelting.fuel": "연료",
@@ -25,11 +29,11 @@
   "category.rei.fuel.time_short.items": "아이템 %s개",
   "category.rei.cooking.xp": "%f 경험치",
   "category.rei.cooking.time&xp": "%s초에 %s 경험치",
-  "category.rei.smoking": "훈제",
-  "category.rei.blasting": "야금",
+  "category.rei.smoking": "훈연",
+  "category.rei.blasting": "용광",
   "category.rei.campfire": "모닥불",
   "category.rei.campfire.time": "%s 초",
-  "category.rei.stone_cutting": "돌 절단",
+  "category.rei.stone_cutting": "석재 절단",
   "category.rei.brewing": "양조",
   "category.rei.brewing.input": "제조 전",
   "category.rei.brewing.reactant": "재료",
@@ -46,11 +50,11 @@
   "text.rei.composting.chance": "§e%d%% 확률",
   "text.rei.composting.page": "%d 페이지",
   "text.rei.config": "설정",
-  "text.rei.config_tooltip": "설정 화면을 엽니다\n§7쉬프트 클릭 시 치트 모드가 전환됩니다",
-  "text.rei.cheat_items": "{player_name}에게 [{item_name}§f] {item_count}개가 지급되었습니다.",
+  "text.rei.config_tooltip": "설정 화면을 엽니다\n§7시프트 클릭 시 치트 모드을 전환합니다",
+  "text.rei.cheat_items": "{player_name}에게 [{item_name}§f] {item_count}개를 지급했습니다.",
   "text.rei.failed_cheat_items": "§c아이템을 지급하지 못했습니다.",
   "text.rei.too_long_nbt": "§c아이템 NBT가 너무 길어 멀티플레이에 적용할 수 없습니다.",
-  "text.rei.performance": "퍼포먼스 분석",
+  "text.rei.performance": "성능 분석",
   "ordering.rei.ascending": "오름차순",
   "ordering.rei.descending": "내림차순",
   "ordering.rei.registry": "레지스트리",
@@ -62,10 +66,10 @@
   "error.rei.not.on.server": "서버에 REI가 없습니다.",
   "error.rei.not.enough.materials": "재료가 부족합니다.",
   "error.rei.internal.error": "내부 오류: %s",
-  "error.rei.recipe.not.unlocked": "아직 등록되지 않은 조합법입니다.",
+  "error.rei.recipe.not.unlocked": "아직 잠금 해제되지 않은 제작법입니다.",
   "error.rei.no.handlers.applicable": "적용 가능한 핸들러가 없습니다.",
   "error.rei.multi.errors": "복합 오류:",
-  "rei.rei.no.slot.in.inv": "인벤토리에 빈 공간이 없습니다",
+  "rei.rei.no.slot.in.inv": "보관함에 빈 공간이 없습니다",
   "text.rei.showing_craftable": "제작 가능 아이템 표시",
   "text.rei.showing_all": "모든 아이템 표시",
   "text.rei.delete_items": "§c아이템 삭제",
@@ -75,11 +79,12 @@
   "text.rei.view_all_categories": "모든 카테고리 보기",
   "text.rei.go_back_first_page": "1 페이지로 돌아가기",
   "text.rei.choose_page": "페이지 선택",
-  "text.rei.shift_click_to": "%s하려면 쉬프트 클릭",
+  "text.rei.shift_click_to": "%s하려면 시프트 클릭",
   "text.rei.gamemode_button.tooltip.dropdown": "게임 모드 전환: 드롭다운",
   "text.rei.gamemode_button.tooltip.entry": "%s(으)로 전환",
   "text.rei.weather_button.tooltip.dropdown": "날씨 전환: 드롭다운",
   "text.rei.weather_button.tooltip.entry": "%s로 전환",
+  "text.rei.time_button.tooltip.entry": "%s(으)로 전환",
   "text.rei.reload_config": "플러그인 다시 불러오기",
   "text.rei.config.is.reloading": "플러그인을 다시 불러오는 중입니다!",
   "text.rei.enabled": "예",
@@ -102,29 +107,31 @@
   "text.rei.remove_favorites_tooltip": "\n§7이 아이템을 즐겨찾기에서 삭제하려면 %s를 누르세요.",
   "text.rei.working_station": "작업대",
   "text.rei.release_export": "내보내려면 %s를 떼세요",
-  "text.rei.recipe_id": "\\n%s조합법 Id: %s",
-  "text.rei.recipe_screen_type.selection": "조합법 화면 종류 선택",
-  "text.rei.recipe_screen_type.selection.sub": "설정 화면에서 언제든지 이 설정을 변경할 수 있습니다.",
-  "text.rei.jei_compat": "JEI 호환 레이어",
-  "text.rei.jei_compat.false": "JEI 호환 레이어: 사용안함",
-  "text.rei.jei_compat.true": "JEI 호환 레이어: 사용",
-  "text.rei.jei_compat.sub": "JEI 호환 레이어를 사용하시겠습니까 %s§7?\n§7이 소스를 통해 JEI 플러그인을 불러올 수 있습니다:\n%s\n\n§7단, REI의 JEI 호환은 완벽하지 않아 문제가 발생할 수 있습니다.\n§c사용 책임은 본인에게 있습니다!",
+  "text.rei.recipe_id": "\\n%s제작법 Id: %s",
+  "text.rei.recipe_screen_type.selection": "제작법 화면 종류 선택",
+  "text.rei.recipe_screen_type.selection.sub": "설정 화면에서 언제든지 이 설정을 바꿀 수 있습니다.",
+  "text.rei.jei_compat": "JEI 호환 계층",
+  "text.rei.jei_compat.false": "JEI 호환 계층: 끔",
+  "text.rei.jei_compat.true": "JEI 호환 계층: 켬",
+  "text.rei.jei_compat.sub": "JEI 호환 계층을 사용하시겠습니까 %s§7?\n§7다음과 같은 곳에서 JEI 플러그인을 불러올 수 있습니다:\n%s\n\n§7단, REI의 JEI 호환은 완벽하지 않아 문제가 발생할 수 있습니다.\n§c사용 책임은 본인에게 있습니다!",
   "text.rei.jei_compat.sub.stability": "§c§l(ALPHA)",
-  "text.rei.view_recipes_for": "%s 조합법 보기",
+  "text.rei.view_recipes_for": "%s 제작법 보기",
   "text.rei.subsets": "그룹 필터",
   "text.rei.tiny_potato": "작은 감자",
   "text.rei.add_favorite_widget": "추가...",
   "text.rei.dispose_here": "이곳에 놓으세요",
+  "text.rei.crash.crash_report": "충돌 보고서 열기",
+  "text.rei.changelog.title": "REI 변경점",
   "favorite.section.gamemode": "게임 모드",
   "favorite.section.weather": "날씨",
   "tooltip.rei.fluid_amount": "§7%d 유닛",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
-  "tooltip.rei.drag_to_add_favorites": "§7즐겨찾기에 추가하려면 이 아이템을 위로 드래그하세요!",
-  "msg.rei.copied_recipe_id": "조합법 ID 복사됨",
-  "msg.rei.recipe_id_details": "조합법 ID: %s",
-  "msg.rei.exported_recipe": "레시피를 내보냈습니다",
+  "tooltip.rei.drag_to_add_favorites": "§7즐겨찾기에 추가하려면 이 아이템을 위로 끌어 놓으세요!",
+  "msg.rei.copied_recipe_id": "제작법 ID 복사됨",
+  "msg.rei.recipe_id_details": "제작법 ID: %s",
+  "msg.rei.exported_recipe": "제작법을 내보냈습니다",
   "msg.rei.exported_recipe.desc": "'rei_exports' 폴더를 확인하세요.",
-  "subsets.rei.roughlyenoughitems.all_entries": "모든 아이템",
+  "subsets.rei.roughlyenoughitems.all_entries": "모든 항목",
   "subsets.rei.roughlyenoughitems.item_groups": "크리에이티브 탭",
   "_comment": "설정 툴팁",
   "config.roughlyenoughitems.title": "Roughly Enough Items 설정",
@@ -135,14 +142,14 @@
   "config.roughlyenoughitems.cheating": "치트",
   "config.roughlyenoughitems.favoritesEnabled": "즐겨찾기 사용:",
   "config.roughlyenoughitems.keyBindings": "키 설정",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "조합법 보기:",
+  "config.roughlyenoughitems.keyBindings.recipeKeybind": "제작법 보기:",
   "config.roughlyenoughitems.keyBindings.hideKeybind": "REI 숨김/보기:",
   "config.roughlyenoughitems.keyBindings.usageKeybind": "사용처 보기:",
   "config.roughlyenoughitems.keyBindings.nextPageKeybind": "다음 페이지:",
   "config.roughlyenoughitems.keyBindings.previousPageKeybind": "이전 페이지:",
   "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "검색창으로 포커스 이동:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "조합법 ID 복사:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "조립법 내보내기:",
+  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "제작법 ID 복사:",
+  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "제작법 내보내기:",
   "config.roughlyenoughitems.keyBindings.favoriteKeybind": "즐겨찾기 추가:",
   "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "이전 화면:",
   "config.roughlyenoughitems.cheatingStyle": "치트 형식:",
@@ -152,8 +159,8 @@
   "config.roughlyenoughitems.motion.configScreenAnimation": "설정 화면 애니메이션:",
   "config.roughlyenoughitems.motion.creditsScreenAnimation": "크레딧 화면 애니메이션:",
   "config.roughlyenoughitems.motion.favoritesAnimation": "즐겨찾기 애니메이션:",
-  "config.roughlyenoughitems.recipeScreenType": "조합법 화면 종류:",
-  "config.roughlyenoughitems.recipeScreenType.config": "조합법 화면 타입: %s",
+  "config.roughlyenoughitems.recipeScreenType": "제작법 화면 종류:",
+  "config.roughlyenoughitems.recipeScreenType.config": "제작법 화면 종류: %s",
   "config.roughlyenoughitems.recipeScreenType.unset": "설정 안함",
   "config.roughlyenoughitems.recipeScreenType.original": "기본형",
   "config.roughlyenoughitems.recipeScreenType.composite": "혼합형",
@@ -164,10 +171,10 @@
   "config.roughlyenoughitems.commands": "명령어",
   "config.roughlyenoughitems.filtering": "필터링",
   "config.roughlyenoughitems.miscellaneous": "기타",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "조합법 화살표 클릭 가능:",
+  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "제작법 화살표 클릭 가능:",
   "config.roughlyenoughitems.isSubsetsEnabled": "그룹 필터 사용:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "인벤토리 강조 활성화됨:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "인챈트 반짝임 효과 렌더링:",
+  "config.roughlyenoughitems.allowInventoryHighlighting": "보관함 강조 활성화됨:",
+  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "마법 부여 반짝임 효과 렌더링:",
   "config.roughlyenoughitems.layout.configButtonLocation": "설정 버튼 위치:",
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "상단",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "하단",
@@ -176,21 +183,21 @@
   "config.roughlyenoughitems.filteredEntries.selectNone": "전체 선택해제",
   "config.roughlyenoughitems.filteredEntries.hide": "선택 아이템 숨김",
   "config.roughlyenoughitems.filteredEntries.show": "선택 아이템 표시",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "먼저 월드를 불러오세요!",
-  "config.roughlyenoughitems.accessibility.entrySize": "아이템 목록 크기:",
+  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "먼저 세계를 불러오세요!",
+  "config.roughlyenoughitems.accessibility.entrySize": "항목 크기:",
   "config.roughlyenoughitems.search.asyncSearch": "비동기 검색:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "비동기 검색 파티션 크기:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "압축 탭:",
   "config.roughlyenoughitems.theme": "모양 테마:",
-  "config.roughlyenoughitems.theme.dark": "다크 테마",
+  "config.roughlyenoughitems.theme.dark": "어두운 테마",
   "config.roughlyenoughitems.theme.light": "밝은 테마",
-  "config.roughlyenoughitems.recipeBorder": "조합법 창 테두리:",
+  "config.roughlyenoughitems.recipeBorder": "제작법 창 테두리:",
   "config.roughlyenoughitems.recipeBorder.lighter": "더 밝게",
   "config.roughlyenoughitems.recipeBorder.default": "기본",
   "config.roughlyenoughitems.recipeBorder.none": "없음",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "페이지당 표시할 조합법 개수:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "조합법 페이지 최대 높이:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "아이템 목록 패널 위치:",
+  "config.roughlyenoughitems.layout.maxRecipesPerPage": "페이지당 표시할 제작법 개수:",
+  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "제작법 페이지 최대 높이:",
+  "config.roughlyenoughitems.accessibility.displayPanelLocation": "항목 패널 위치:",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "왼쪽",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "오른쪽",
   "config.roughlyenoughitems.search.tooltipSearch": "툴팁 검색 (#):",
@@ -200,7 +207,7 @@
   "config.roughlyenoughitems.search_mode.always": "항상 사용",
   "config.roughlyenoughitems.search_mode.prefix": "접두사 사용 시",
   "config.roughlyenoughitems.search_mode.never": "항상 사용안함",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "아이템 목록 패널 디버그 모드:",
+  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "항목 패널 디버그 모드:",
   "config.roughlyenoughitems.search.debugSearchTimeRequired": "검색 디버그 모드:",
   "config.roughlyenoughitems.accessibility.resizeDynamically": "동적 크기 조정:",
   "config.roughlyenoughitems.layout.searchFieldLocation": "검색창 위치:",
@@ -210,12 +217,12 @@
   "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "스크롤바 페이드:",
   "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "안함",
   "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "비활성화일 떄",
-  "config.roughlyenoughitems.disableRecipeBook": "바닐라 조합법 책:",
+  "config.roughlyenoughitems.disableRecipeBook": "바닐라 제작법 책:",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§c아니오",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§a예",
   "config.roughlyenoughitems.leftSideMobEffects": "몬스터 효과 위치:",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "왼쪽",
-  "config.roughlyenoughitems.fixTabCloseContainer": "바닐라 탭 제작대 수정 (조합법 책이 사용안될 때):",
+  "config.roughlyenoughitems.fixTabCloseContainer": "바닐라 탭 제작대 수정 (제작법 책이 사용안될 때):",
   "config.roughlyenoughitems.lighterButtonHover": "버튼 호버 효과 더 밝게:",
   "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "제작 가능 필터:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "유틸리티 버튼:",
@@ -227,18 +234,20 @@
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI 스레드",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§c패킷 스레드",
   "config.roughlyenoughitems.commands.weatherCommand": "날씨 명령어:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "아이템 패널 정렬 순서:",
+  "config.roughlyenoughitems.layout.entryPanelOrdering": "항목 정렬 순서:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "더 빠른 아이템 렌더링:",
+  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "더 빠른 항목 렌더링:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "항목 렌더링 캐싱:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "이 설정은 항목 렌더링 성능을 최대 5배, 평균 2.5배 향상시킵니다. 하지만 마법 부여 반짝임이나 움직이는 텍스처 기능을 망가트립니다.",
   "config.roughlyenoughitems.itemCheatingMode": "치트 모드 아이템 개수:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "일반",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "반전",
   "config.roughlyenoughitems.search.searchFavorites": "즐겨찾기 검색 필터:",
   "config.roughlyenoughitems.tooltips.appendModNames": "모드 이름 추가:",
   "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "즐겨찾기 힌트 추가:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "아이템 패널 행 하나씩 스크롤:",
+  "config.roughlyenoughitems.accessibility.snapToRows": "항목 패널 행 하나씩 스크롤:",
   "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "ID 알림 복사:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "아이템 목록 액션:",
+  "config.roughlyenoughitems.scrollingEntryListWidget": "항목 목록 액션:",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "스크롤",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "페이지",
   "config.roughlyenoughitems.horizontalEntriesBoundaries": "아이템 목록 수평 경계:",
@@ -253,6 +262,7 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "일반 텍스트 (밑줄)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "색 강조",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "색 강조 (밑줄)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "항목 포커스 모드:",
   "config.roughlyenoughitems.filteringScreen": "사용자 정의 필터",
   "config.roughlyenoughitems.filteringRulesScreen": "사용자 정의 필터 규칙",
   "config.roughlyenoughitems.filteringRulesScreen.new": "필터링 규칙 생성",
