--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pl_pl.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pl_pl.json
@@ -128,6 +128,8 @@
   "text.rei.tiny_potato": "Mały ziemniak",
   "text.rei.add_favorite_widget": "Dodaj...",
   "text.rei.dispose_here": "Usuń tutaj",
+  "text.rei.changelog.title": "Zmiany w REI",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Niepowodzenie przy czytaniu dziennika zmian",
   "favorite.section.gamemode": "Tryb gry",
   "favorite.section.weather": "Pogoda",
   "tooltip.rei.fluid_amount": "§7%d Jednostek",
@@ -185,6 +187,8 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Górna",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Dolna",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Scal widoki z jednakową zawartością:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Zawsze niewidzialny",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Automatyczne ukrywanie",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Zaznacz wszystkie",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Odznacz wszystkie",
   "config.roughlyenoughitems.filteredEntries.hide": "Ukryj zaznaczone",
@@ -266,6 +270,7 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Zwykły (podkreślenie)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Kolorowy",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Kolorowy (podkreślenie)",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Przybliżenie",
   "config.roughlyenoughitems.filteringScreen": "Niestandardowe filtrowanie",
   "config.roughlyenoughitems.filteringRulesScreen": "Dostosowane reguły filtrowania",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Utwórz regułę filtrowania",
