--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -13,6 +13,8 @@
   "text.rei.not.fully.initialized.tooltip": "Etapas restantes: %s\nSe isso continuar,\nverifique os registros!\n",
   "text.rei.inventory.highlighting.enabled": "Destaque de inventário ativado",
   "text.rei.inventory.highlighting.enabled.tooltip": "Os espaços não encontrados na busca\nficarão da cor cinza.\nClique duas vezes na barra de busca para ativar o modo.",
+  "text.rei.caching.search": "Memorizando busca...",
+  "text.rei.caching.search.step": "Passo %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Tema escuro",
   "text.rei.config.menu.craftable_filter": "Fabricáveis",
   "text.rei.config.menu.display": "Exibição...",
@@ -20,6 +22,7 @@
   "text.rei.config.menu.display.left_side_mob_effects": "Efeitos de criaturas (esquerdo)",
   "text.rei.config.menu.display.left_side_panel": "Painel do lado esquerdo",
   "text.rei.config.menu.display.scrolling_side_panel": "Painel de rolagem lateral",
+  "text.rei.config.menu.display.caching_entry_rendering": "Memorizando entrada",
   "text.rei.config.menu.display.side_search_field": "Campo de busca lateral",
   "text.rei.config.menu.display.syntax_highlighting": "Destaque de sintaxe",
   "text.rei.config.menu.config": "Outras...",
@@ -94,7 +97,12 @@
   "text.rei.gamemode_button.tooltip.entry": "Mudar para %s",
   "text.rei.weather_button.tooltip.dropdown": "Alterar tempo: Lista",
   "text.rei.weather_button.tooltip.entry": "Mudar para %s",
+  "text.rei.time_button.name.morn": "Manhã",
+  "text.rei.time_button.name.noon": "Meio-dia",
+  "text.rei.time_button.name.evening": "Fim de tarde",
+  "text.rei.time_button.name.night": "Noite",
   "text.rei.reload_config": "Recarregar plug-ins",
+  "text.rei.reload_search": "Recarregar busca",
   "text.rei.config.is.reloading": "Recarregando plug-ins!",
   "text.rei.enabled": "Sim",
   "text.rei.disabled": "Não",
@@ -129,6 +137,11 @@
   "text.rei.tiny_potato": "Batatinhas",
   "text.rei.add_favorite_widget": "Adicionar...",
   "text.rei.dispose_here": "Deixe aqui",
+  "text.rei.crash.title": "O REI parou de funcionar!",
+  "text.rei.crash.crash_report": "Abrir relatório de erro",
+  "text.rei.changelog.title": "Registro de alterações",
+  "text.rei.changelog.error.missingChangelogFile": "Registro ausente!",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler registro!",
   "favorite.section.gamemode": "Modo de jogo",
   "favorite.section.weather": "Tempo",
   "tooltip.rei.fluid_amount": "§7%d unidade(s)",
@@ -147,6 +160,7 @@
   "config.roughlyenoughitems.functionality": "Funções",
   "config.roughlyenoughitems.advanced": "Avançado",
   "config.roughlyenoughitems.cheating": "Trapaças:",
+  "config.roughlyenoughitems.cheating.when_creative": "No modo Criativo",
   "config.roughlyenoughitems.favoritesEnabled": "Ativar favoritos",
   "config.roughlyenoughitems.keyBindings": "Atalhos",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Mostrar receita:",
@@ -186,6 +200,9 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Superior",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Inferior",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Unir visores de conteúdo idêntico:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Sempre invisível",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Ocultar auto.",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Sempre visível",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Selecionar tudo",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Desmarcar todos",
   "config.roughlyenoughitems.filteredEntries.hide": "Ocultar selecionados",
@@ -245,6 +262,7 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "Ordem do painel de entrada",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Renderização rápida de entradas:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Memorizando entrada:",
   "config.roughlyenoughitems.itemCheatingMode": "Quantidade de itens por trapaça:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Comum",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Invertido",
@@ -268,6 +286,9 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Simples (sublinhado)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Colorido",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Colorido (sublinhado)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Modo de foco da entrada:",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Ampliado",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Realçado",
   "config.roughlyenoughitems.filteringScreen": "Filtro personalizado",
   "config.roughlyenoughitems.filteringRulesScreen": "Regras de filtros personalizados",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Criar regra para filtro",
