--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
@@ -13,6 +13,8 @@
   "text.rei.not.fully.initialized.tooltip": "Пропущены этапы: %s\nЕсли это не исчезло,\nпопробуйте поискать проблему в журналах!",
   "text.rei.inventory.highlighting.enabled": "Подсветка инвентаря включена",
   "text.rei.inventory.highlighting.enabled.tooltip": "Это делает слоты, которые не соответствуют\nфильтру поиска серыми.\nДважды нажмите на строке поиска, чтобы переключить этот режим.",
+  "text.rei.caching.search": "REI кэширует результаты поиска...",
+  "text.rei.caching.search.step": "Шаг %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Тёмная тема",
   "text.rei.config.menu.craftable_filter": "Фильтр по возможности создания",
   "text.rei.config.menu.display": "Настройки отображения...",
@@ -102,6 +104,7 @@
   "text.rei.time_button.name.evening": "Вечер",
   "text.rei.time_button.name.night": "Ночь",
   "text.rei.reload_config": "Перезагрузить плагины",
+  "text.rei.reload_search": "Поиск перезагрузки",
   "text.rei.config.is.reloading": "Плагины перезагружаются!",
   "text.rei.enabled": "Да",
   "text.rei.disabled": "Нет",
@@ -139,6 +142,9 @@
   "text.rei.crash.title": "Сбой REI!",
   "text.rei.crash.description": "§cПроизошёл сбой Roughly Enough Item при \"%s\".\n\n§fПодробности о сбое показаны ниже. Пожалуйста, определите, какой мод вызвал ошибку и сообщите о ней автору мода вместе с журналом сбоя, приведённом ниже.\n\nЕсли вы считаете, что эта ошибка вызвана багом в Roughly Enough Item, пожалуйста, сообщите о ней на наш отслеживатель ошибок.\n\n§6Спасибо за помощь!",
   "text.rei.crash.crash_report": "Открыть отчет об ошибке",
+  "text.rei.changelog.title": "Список изменений REI",
+  "text.rei.changelog.error.missingChangelogFile": "Отсутствует файл журнала изменений!",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Не удалось прочитать файл журнала изменений!",
   "favorite.section.gamemode": "Игровой режим",
   "favorite.section.weather": "Погода",
   "favorite.section.time": "Время",
