--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -9,6 +9,10 @@
   "text.rei.search.field.suggestion": "搜索...",
   "text.rei.feedback": "想给REI的开发者提交什么建议吗？%s以反馈！",
   "text.rei.feedback.link": "点击此处填写Google问卷",
+  "text.rei.support.me": "支持我继续让 REI 变得更好！",
+  "text.rei.support.me.desc": "作为 REI 的 Patreon 订阅会员，你可以下载适用于最新 Minecraft 快照的 REI 版本。\n你也可以通过租用 BisectHosting 服务器来支持我。",
+  "text.rei.support.me.patreon": "在 Patreon 上支持我",
+  "text.rei.support.me.bisect": "在 BisectHosting 上使用代码 SHEDANIEL",
   "text.rei.not.fully.initialized": "REI 尚未完全初始化！",
   "text.rei.not.fully.initialized.tooltip": "初始化未完成！缺失加载阶段：%s\n若该提示长时间存在，\n请用日志文件寻求帮助！",
   "text.rei.inventory.highlighting.enabled": "物品栏高亮已开启",
@@ -53,7 +57,7 @@
   "category.rei.tilling": "耕种",
   "category.rei.pathing": "制造草径",
   "category.rei.waxing": "涂蜡",
-  "category.rei.wax_scraping": "涂蜡",
+  "category.rei.wax_scraping": "脱蜡",
   "category.rei.oxidizing": "氧化反应",
   "category.rei.oxidation_scraping": "刮除氧化层",
   "category.rei.information": "信息",
