--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -9,6 +9,10 @@
   "text.rei.search.field.suggestion": "搜尋…",
   "text.rei.feedback": "您想向 REI 開發人員提供任何回饋嗎？ %s 以提交您的建議！",
   "text.rei.feedback.link": "點擊此處前往 Google Form",
+  "text.rei.support.me": "支持我繼續讓 REI 變得更好！",
+  "text.rei.support.me.desc": "作為 REI 的 Patreon 訂閱會員，你可以下載適用於最新 Minecraft 快照的 REI 版本。\n你也可以通過租用 BisectHosting 服務器來支持我。",
+  "text.rei.support.me.patreon": "在 Patreon 上支持我",
+  "text.rei.support.me.bisect": "在 BisectHosting 上使用代碼 SHEDANIEL",
   "text.rei.not.fully.initialized": "REI 尚未完成初始化！",
   "text.rei.not.fully.initialized.tooltip": "初始化未完成！缺失加載階段：%s\n若該提示長時間留存，\n請用日誌檔案尋求協助！",
   "text.rei.inventory.highlighting.enabled": "物品欄突顯顯示已啟用",
@@ -18,14 +22,14 @@
   "text.rei.config.menu.dark_theme": "深色主題",
   "text.rei.config.menu.craftable_filter": "合成物品篩選器",
   "text.rei.config.menu.display": "介面設定...",
-  "text.rei.config.menu.display.remove_recipe_book": "移除原版配方手冊",
+  "text.rei.config.menu.display.remove_recipe_book": "移除原版配方書",
   "text.rei.config.menu.display.left_side_mob_effects": "左側狀態效果",
   "text.rei.config.menu.display.left_side_panel": "左側面板",
   "text.rei.config.menu.display.scrolling_side_panel": "滑動面板",
   "text.rei.config.menu.display.caching_entry_rendering": "緩存項目繪圖",
   "text.rei.config.menu.display.side_search_field": "側邊搜尋欄",
   "text.rei.config.menu.display.syntax_highlighting": "語法突出顯示",
-  "text.rei.config.menu.config": "更多選項…",
+  "text.rei.config.menu.config": "選項…",
   "category.rei.crafting": "合成",
   "category.rei.smelting": "燒煉",
   "category.rei.smelting.fuel": "燃料",
@@ -63,7 +67,7 @@
   "text.rei.config_tooltip": "開啟設定畫面\n§7按住《Shift》鍵再點擊此處以開關作弊模式",
   "text.rei.cheat_items": "已將 {item_count} 個 [{item_name}§f] 給予 {player_name}",
   "text.rei.failed_cheat_items": "§c給予物品失敗",
-  "text.rei.too_long_nbt": "§c物品 NBT 過長，不能應用於多人遊戲。",
+  "text.rei.too_long_nbt": "§c物品 NBT 過長，不適用於多人遊戲。",
   "text.rei.tag_match": "接受標籤: #%s",
   "text.rei.performance": "效能分析",
   "ordering.rei.ascending": "從 A 到 Z",
@@ -140,6 +144,7 @@
   "text.rei.add_favorite_widget": "加入...",
   "text.rei.dispose_here": "在這裡丟棄",
   "text.rei.crash.title": "REI 已崩潰!",
+  "text.rei.crash.description": "§C大約足夠的專案剛剛在“%s”期間經歷了崩潰。\n\n§F崩潰的詳細資訊顯示在下面。 請識別導致崩潰的模组，並與下面提供的崩潰日誌一起向模组作者報告。\n\n如果您認為此崩潰是由Roughly Enough Item中的錯誤引起的，請將其報告給我們的問題跟蹤器。\n\n§6感謝您的幫助！",
   "text.rei.crash.crash_report": "查看錯誤日誌",
   "text.rei.changelog.title": "REI 更新日誌",
   "text.rei.changelog.error.missingChangelogFile": "更新日誌檔案遺失",
